ViewModels and Services class libraries, WallpaperController, AllWallpapers view

--- a/Wpapers/Wpapers.csproj
+++ b/Wpapers/Wpapers.csproj
@@ -17,6 +17,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Wpapers.Data\Wpapers.Data.csproj" />
+    <ProjectReference Include="..\Wpapers.Services\Wpapers.Services.csproj" />
   </ItemGroup>
 
 </Project>
