Upload new wallpaper

--- a/Wpapers/appsettings.json
+++ b/Wpapers/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=DESKTOP-5LNGPT6\\SQLEXPRESS;Database=Wpapers;Trusted_Connection=True;Integrated Security=true;TrustServerCertificate=True"
+    "DefaultConnection": "Server=;Database=Wpapers;Trusted_Connection=True;Integrated Security=true;TrustServerCertificate=True"
   },
   "Logging": {
     "LogLevel": {
