--- a/Wpapers.ViewModels/Wpapers.ViewModels.csproj
+++ b/Wpapers.ViewModels/Wpapers.ViewModels.csproj
@@ -6,4 +6,12 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="8.0.1" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Wpapers.Common\Wpapers.Common.csproj" />
+  </ItemGroup>
+
 </Project>
