Upload wallpaper file

--- a/Wpapers/Wpapers.csproj
+++ b/Wpapers/Wpapers.csproj
@@ -20,4 +20,8 @@
     <ProjectReference Include="..\Wpapers.Services\Wpapers.Services.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="wwwroot\images\wallpaper\" />
+  </ItemGroup>
+
 </Project>
