Setting users name when registering

--- a/Wpapers.ViewModels/Wpapers.ViewModels.csproj
+++ b/Wpapers.ViewModels/Wpapers.ViewModels.csproj
@@ -12,6 +12,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Wpapers.Common\Wpapers.Common.csproj" />
+    <ProjectReference Include="..\Wpapers.Data.Models\Wpapers.Data.Models.csproj" />
   </ItemGroup>
 
 </Project>
